ViT with Issues

--- a/Vision_Transform.ipynb
+++ b/Vision_Transform.ipynb
@@ -115,30 +115,11 @@
         "    train_files = []\n",
         "    validation_files = []\n",
         "    test_files = []\n",
-        "    folders = # Path to the folders containing the images\n",
+        "    folders = glob.glob(\"\") # Path to folder containing images\n",
         "    train_pca = []\n",
         "    print(folders)\n",
-        "    for folder in folders:\n",
-        "        folder_files = [x for x in os.listdir(folder) if x.endswith(\".jpg\")]\n",
-        "\n",
-        "        for file in folder_files:\n",
-        "            csv_file = file.replace(\".jpg\", \".csv\")\n",
-        "            file = os.path.join(folder, file)\n",
-        "\n",
-        "            try:\n",
-        "                csv_file = os.path.join(folder, csv_file)\n",
-        "                csv_file = pd.read_csv(csv_file)\n",
-        "                if csv_file.shape[0] == 205:\n",
-        "\n",
-        "                    prob = np.random.random()\n",
-        "                    if prob < 0.02:\n",
-        "                        test_files.append(file)\n",
-        "                    elif 0.02< prob <0.12:\n",
-        "                        validation_files.append(file)\n",
-        "                    else:\n",
-        "                        train_files.append(file)\n",
-        "            except:\n",
-        "                continue\n",
+        "    \n",
+        "    # Split into train, validation, and test sets\n",
         "\n",
         "    print(len(train_files))\n",
         "    print(len(validation_files))\n",
@@ -165,13 +146,13 @@
         "def PCA_Done(train_files):\n",
         "    data = np.zeros((len(train_files), 201))\n",
         "\n",
-        "    for i, file in enumerate(train_files):\n",
-        "        label_name = file.replace(\".jpg\", \".csv\")\n",
-        "        if os.path.exists(label_name):\n",
-        "            label_file = pd.read_csv(\n",
-        "                label_name, skiprows=[0, 1, 2, 3, 4], names=[\"freq\", \"values\"]\n",
-        "            )\n",
-        "            data[i, :] = label_file[\"values\"].astype(float)\n",
+        "    # for i, file in enumerate(train_files):\n",
+        "        # label_name = # Get Labels\n",
+        "        # if os.path.exists(label_name):\n",
+        "        #     label_file = pd.read_csv(\n",
+        "        #         label_name, skiprows=[0, 1, 2, 3, 4], names=[\"freq\", \"values\"]\n",
+        "        #     )\n",
+        "        #     data[i, :] = label_file[\"values\"].astype(float)\n",
         "\n",
         "    # using the training files fit pca\n",
         "    pca = PCA(n_components=20)\n",
@@ -211,49 +192,23 @@
         "        batch_label = []\n",
         "\n",
         "        # Read in each input, perform preprocessing and get labels\n",
-        "        for input_path_index in batch_paths:\n",
-        "            file = X[input_path_index]\n",
-        "\n",
-        "            img = cv2.imread(file, 0)\n",
-        "\n",
-        "            folder = os.path.split(os.path.split(file)[0])[1]\n",
-        "            if folder == \"0d65h\" or folder == \"0d75h\":\n",
-        "                angle = np.random.randint(0, 360)\n",
-        "                img = rotateImage(img, angle)\n",
-        "            img = cv2.resize(img, (HEIGHT, WIDTH))\n",
-        "\n",
-        "            img = img / 255\n",
-        "            img = img.reshape(img.shape[0], img.shape[1], 1)\n",
-        "            prop = re.findall(\"\\d+\", folder)\n",
-        "            prop = [int(x) for x in prop]\n",
-        "\n",
-        "            prop[0] = prop[0] / 60\n",
-        "            prop[1] = prop[1] / 75\n",
-        "\n",
-        "            prop1 = np.full((HEIGHT, WIDTH, 1), prop[0])\n",
-        "            prop2 = np.full((HEIGHT, WIDTH, 1), prop[1])\n",
-        "\n",
-        "            props = np.concatenate((prop1, prop2), axis=2)\n",
-        "            # combine properties to images as additional channels\n",
-        "            img = np.concatenate((img, props), axis=2)\n",
-        "            images.append(img)\n",
-        "            # props.append(prop)\n",
-        "            label_name = file.replace(\".jpg\", \".csv\")\n",
-        "\n",
-        "            label_file = pd.read_csv(\n",
-        "                label_name, skiprows=[0, 1, 2, 3, 4], names=[\"freq\", \"values\"]\n",
-        "            )\n",
-        "            label_file[\"values\"] = label_file[\"values\"].astype(float)\n",
-        "            label = label_file[\"values\"].values\n",
-        "            label = pca.transform(label.reshape(1, -1)).reshape(-1,)\n",
-        "\n",
-        "\n",
-        "            batch_label.append(label)\n",
+        "        \n",
+        "        # For Each file in the batch:\n",
+        "            # Add code for generating images and labels here.\n",
+        "            # First read the image as grayscale\n",
+        "            # Then resize the image to 64x64\n",
+        "            # Then normalize the image\n",
+        "            # Then reshape the image to (64,64,1)\n",
+        "            # Then append the image to the images list\n",
+        "            # Then read the corresponding label file\n",
+        "            # Then append the label to the labels list\n",
+        "            \n",
         "\n",
         "        batch_x = np.array(images)\n",
         "        batch_y = np.array(batch_label)\n",
         "\n",
         "        yield (batch_x, batch_y)\n",
+        "        \n",
         "train_gen = batch_generator(pca, train_files)\n",
         "valid_gen = batch_generator(pca, validation_files, batch_size=8)\n",
         "test_gen = batch_generator(pca, test_files, 1)"
@@ -308,13 +263,6 @@
         "\n",
         "    model = tf.keras.Model(inputs=inputs, outputs=output)\n",
         "    return model\n",
-        "\n",
-        "'''\n",
-        "def build_vit_model(image_size, num_classes, num_heads=4, num_transformer_layers=4):\n",
-        "    model = Sequential()\n",
-        "\n",
-        "\n",
-        "'''\n",
         "\n",
         "model = build_vit_model(64, 1)  # Replace 256 with your actual image size\n",
         "model.compile(\n",
@@ -398,9 +346,7 @@
         "        img = cv2.imread(file, 0)\n",
         "\n",
         "        folder = os.path.split(os.path.split(file)[0])[1]\n",
-        "        if folder == \"0d65h\" or folder == \"0d75h\":\n",
-        "            angle = np.random.randint(0, 360)\n",
-        "            img = rotateImage(img, angle)\n",
+        "        \n",
         "        img = cv2.resize(img, (HEIGHT, WIDTH))\n",
         "        img = img.reshape(img.shape[0], img.shape[1], 1)\n",
         "        img = img / 255\n",
@@ -414,28 +360,19 @@
         "        props = np.concatenate((prop1, prop2), axis=2)\n",
         "        img = np.concatenate((img, props), axis=2)\n",
         "        img = img.reshape(-1, img.shape[0], img.shape[1], img.shape[2])\n",
-        "        label_name = file.replace(\".jpg\", \".csv\")\n",
-        "\n",
-        "        label_file = pd.read_csv(\n",
-        "            label_name, skiprows=[0, 1, 2, 3, 4], names=[\"freq\", \"values\"]\n",
-        "        )\n",
-        "        label_file[\"values\"] = label_file[\"values\"].astype(float)\n",
-        "        label = label_file[\"values\"].values\n",
+        "        \n",
+        "        # Get Labels\n",
         "\n",
         "        pred = model.predict(img)\n",
-        "        # print(pred)\n",
         "        predictions = pca.inverse_transform(pred).reshape(-1)\n",
-        "        # pred = np.array(pred)\n",
         "\n",
-        "        # predictions = pca.inverse_transform(pred[0])\n",
-        "        # pred = scale.inverse_transform(predictions)\n",
-        "        label_file[\"pred_values\"] = predictions\n",
-        "        print(label_file[\"pred_values\"].shape)\n",
-        "        plt.ylim(0,0.1)\n",
-        "        plt.plot(predictions)\n",
-        "        plt.plot(label)\n",
-        "        plt.legend([\"Predictions\", \"Actual_Values\"])\n",
-        "        plt.show()\n",
+        "        # label_file[\"pred_values\"] = predictions\n",
+        "        # print(label_file[\"pred_values\"].shape)\n",
+        "        # plt.ylim(0,0.1)\n",
+        "        # plt.plot(predictions)\n",
+        "        # plt.plot(label)\n",
+        "        # plt.legend([\"Predictions\", \"Actual_Values\"])\n",
+        "        # plt.show()\n",
         "\n",
         "K.clear_session()\n",
         "gc.collect()"
