Some changes to remove private data

--- a/Vision_Transform.ipynb
+++ b/Vision_Transform.ipynb
@@ -148,11 +148,6 @@
         "\n",
         "    # for i, file in enumerate(train_files):\n",
         "        # label_name = # Get Labels\n",
-        "        # if os.path.exists(label_name):\n",
-        "        #     label_file = pd.read_csv(\n",
-        "        #         label_name, skiprows=[0, 1, 2, 3, 4], names=[\"freq\", \"values\"]\n",
-        "        #     )\n",
-        "        #     data[i, :] = label_file[\"values\"].astype(float)\n",
         "\n",
         "    # using the training files fit pca\n",
         "    pca = PCA(n_components=20)\n",
@@ -273,7 +268,7 @@
         "print(model.summary())\n",
         "callbacks = [\n",
         "    tf.keras.callbacks.ModelCheckpoint(\n",
-        "        \"Iteration_1.h5\", save_weights_only=True, save_best_only=True, mode=\"min\"\n",
+        "        \"Best_Model.h5\", save_weights_only=True, save_best_only=True, mode=\"min\"\n",
         "    ),\n",
         "    tf.keras.callbacks.ReduceLROnPlateau(\n",
         "        monitor=\"val_loss\",\n",
@@ -347,19 +342,14 @@
         "\n",
         "        folder = os.path.split(os.path.split(file)[0])[1]\n",
         "        \n",
-        "        img = cv2.resize(img, (HEIGHT, WIDTH))\n",
-        "        img = img.reshape(img.shape[0], img.shape[1], 1)\n",
-        "        img = img / 255\n",
-        "        prop = re.findall(\"\\d+\", folder)\n",
-        "        prop = [int(x) for x in prop]\n",
-        "        prop = np.array(prop)\n",
-        "        prop[0] = prop[0] / 60\n",
-        "        prop[1] = prop[1] / 75\n",
-        "        prop1 = np.full((HEIGHT, WIDTH, 1), prop[0])\n",
-        "        prop2 = np.full((HEIGHT, WIDTH, 1), prop[1])\n",
-        "        props = np.concatenate((prop1, prop2), axis=2)\n",
-        "        img = np.concatenate((img, props), axis=2)\n",
-        "        img = img.reshape(-1, img.shape[0], img.shape[1], img.shape[2])\n",
+        "        # Image processing should be done here\n",
+        "        \n",
+        "        \n",
+        "        # Get Properties\n",
+        "        \n",
+        "        # Concatenate Image and Properties\n",
+        "        # img = np.concatenate((img, props), axis=2)\n",
+        "        # img = img.reshape(-1, img.shape[0], img.shape[1], img.shape[2])\n",
         "        \n",
         "        # Get Labels\n",
         "\n",
@@ -403,9 +393,9 @@
         "    callbacks=callbacks,\n",
         ")\n",
         "\n",
-        "model.save_weights('Iteraion_1_weights.h5')\n",
+        "model.save_weights('Final_Model_weights.h5')\n",
         "\n",
-        "model.save('Iteration_1_model.h5')"
+        "model.save('Final_Model.h5')"
       ]
     },
     {
