Data Splitting Mechanism Implemented

--- a/Vision_Transform.ipynb
+++ b/Vision_Transform.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "gLEEms7wilZP"
       },
@@ -24,7 +24,7 @@
         "import glob\n",
         "import re\n",
         "import gc\n",
-        "# from google.colab.patches import cv2_imshow\n",
+        "from google.colab.patches import cv2_imshow\n",
         "from keras.models import Sequential, Model\n",
         "from keras.layers import (\n",
         "    Dense,\n",
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -111,23 +111,41 @@
       "outputs": [],
       "source": [
         "# Cell 4: Data Split Function\n",
-        "def splitter():\n",
-        "    train_files = []\n",
-        "    validation_files = []\n",
-        "    test_files = []\n",
-        "    folders = glob.glob(\"\") # Path to folder containing images\n",
-        "    train_pca = []\n",
-        "    print(folders)\n",
+        "def splitter(train_ratio,validation_ratio):\n",
+        "   \n",
+        "    data=[]\n",
+        "    folders = glob.glob('PetImages/*') # Path to folder containing images \n",
+        "    for image_class in folders:\n",
+        "        for image in os.listdir(os.path.join(image_class)):\n",
+        "            X=[]\n",
+        "            X.append(os.path.join(image_class,image));\n",
+        "            X.append(image_class.split('\\\\')[-1])\n",
+        "            data.append(X)\n",
+        "    # # Split into train, validation, and test sets\n",
+        "    data=pd.Series(data)\n",
+        "    data=data.sample(frac=1) #randomizes the data array.\n",
+        "    train_size=int(train_ratio*len(data))\n",
+        "    train_files = data[0:train_size]\n",
+        "    validation_size=int(validation_ratio*len(train_files))\n",
+        "    validation_files = train_files[:validation_size]\n",
+        "    test_files = data[train_size:]\n",
         "    \n",
-        "    # Split into train, validation, and test sets\n",
         "\n",
+        "    # train_pca = []\n",
+        "    \n",
+        "    print(folders)\n",
         "    print(len(train_files))\n",
         "    print(len(validation_files))\n",
         "    print(len(test_files))\n",
         "    return train_files, test_files, validation_files\n",
         "\n",
-        "train_files, test_files, validation_files = splitter()"
+        "# train_files, test_files, validation_files = splitter(train_ratio,validation_ratio)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
@@ -467,7 +485,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.18"
+      "version": "3.10.10"
     }
   },
   "nbformat": 4,
