--- a/Vision_Transform.ipynb
+++ b/Vision_Transform.ipynb
@@ -169,8 +169,8 @@
         "def PCA_Done(train_files):\n",
         "    data = np.zeros((len(train_files), 201))\n",
         "\n",
-        "    for i, file in enumerate(train_files):\n",
-        "        label_name = # Get Labels\n",
+        "    # for i, file in enumerate(train_files):\n",
+        "    #     label_name = # Get Labels\n",
         "\n",
         "    # using the training files fit pca\n",
         "    pca = PCA(n_components=20)\n",
